TG-2537 fix(modal): Overflow auto on modals
Fix vertical scroll on all modals when using a small screen

--- a/css/_general.scss
+++ b/css/_general.scss
@@ -693,11 +693,7 @@ app-login .modal-body {
 
 .modal-body {
     overflow-x: visible;
-    overflow-y: visible;
-
-    &.modal-scroll {
-        overflow-y: auto;
-    }
+    overflow-y: auto;
 }
 
 .content-area p {
